--- a/planes.html
+++ b/planes.html
@@ -5,6 +5,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
 <title>ZenSite | Planes</title>
 
+<!-- 🔥 TIPOGRAFÍA PREMIUM -->
+<link href="https://fonts.googleapis.com/css2?family=Sora:wght@500;600;700;800&family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+
 <style>
 :root{
 --bg:#050505;
@@ -21,7 +24,7 @@
 *{margin:0;padding:0;box-sizing:border-box}
 html{scroll-behavior:smooth}
 body{
-font-family:"Montserrat",system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
+font-family:"Inter",system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
 background:var(--bg);
 color:#fff;
 overflow-x:hidden;
@@ -80,8 +83,9 @@ margin-bottom:10px;
 }
 
 h1{
+font-family:"Sora",system-ui,sans-serif;
 font-size:clamp(40px,5vw,74px);
-font-weight:1000;
+font-weight:800;
 line-height:1.02;
 letter-spacing:-.03em;
 }
@@ -145,8 +149,9 @@ font-weight:900;
 }
 
 .title{
+font-family:"Sora",system-ui,sans-serif;
 font-size:28px;
-font-weight:1000;
+font-weight:700;
 margin-bottom:8px;
 }
 
@@ -159,7 +164,7 @@ margin:12px 0;
 
 .price .amount{
 font-size:34px;
-font-weight:1000;
+font-weight:800;
 }
 
 .price .note{
@@ -193,7 +198,7 @@ width:100%;
 padding:16px;
 border-radius:16px;
 border:none;
-font-weight:1000;
+font-weight:900;
 cursor:pointer;
 background:#fff;
 color:#111;
